clusters/area87/homelab/nextcloud/nextcloud.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  namespace: homelab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      containers:
      - name: nextcloud
        image: nextcloud:29
        volumeMounts:
        - name: nextcloud-data
          mountPath: /var/www/html
      volumes:
      - name: nextcloud-data
        persistentVolumeClaim:
          claimName: nextcloud-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  namespace: homelab
spec:
  selector:
    app: nextcloud
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
  type: NodePort
